--- a/css/styles.css
+++ b/css/styles.css
@@ -7,5 +7,22 @@
 body {
     font-size: 1.25em;
     font-weight: 700;
-    border: 2px solid black;
+    line-height: 1.42em;
+}
+
+
+/* Header */
+
+.page-header {
+    text-align: center;
+}
+
+.gradient-border {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 255, .5), yellow, rgba(0, 0, 255, .5));
+}
+
+.logo {
+    width: 225px;
 }
