--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,11 @@
 body {
     font-size: 1.25em;
     font-weight: 700;
-    line-height: 1.42em;
+    line-height: .5em;
+}
+
+span {
+    font-weight: 400;
 }
 
 
@@ -24,5 +28,5 @@ body {
 }
 
 .logo {
-    width: 225px;
+    width: 200px;
 }
