--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ main {
 .pokeList--item {
     font-size: 1.25em;
     font-weight: 700;
+    line-height: 1.5em;
     text-align: center;
     text-transform: capitalize;
     color: #2a75bb;
@@ -50,4 +51,13 @@ main {
     background-color: #ffcb05;
     border-radius: 5px;
     padding: 5px 10px;
+    box-shadow: 2px 2px 2px #666;
+    /* transform: rotateX(0); */
+    transform: scale(1);
+    transition: .1s ease-in;
+}
+
+.pokeList--item:hover {
+    /* transform: rotateX(15deg); */
+    transform: scale(.985);
 }
