--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,13 @@ main {
     /* transform: rotateX(15deg); */
     transform: scale(.985);
 }
+
+.hidden {
+    display: none;
+}
+
+.loader {
+    text-align: center;
+    font-size: 100px;
+    margin-top: 100px;
+}
