--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,26 @@ main {
     margin: 50px;
 }
 
+.title-box {
+    display: flex;
+    justify-content: center;
+}
+
+.title {
+    font-family: 'Sriracha', cursive;
+    text-align: center;
+    font-size: 75px;
+    font-weight: 100;
+    letter-spacing: -6px;
+    color: #ffcb05;
+    text-shadow: -1px 2px 2px #2a75bb;
+    -webkit-text-stroke: 3px #2a75bb;
+}
+
 .pokemon-list {
     list-style: none;
     display: flex;
-    gap: 50px;
+    gap: 50px 100px;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
@@ -45,6 +61,7 @@ main {
     font-weight: 700;
     line-height: 1.5em;
     text-align: center;
+    min-width: 225px;
     text-transform: capitalize;
     color: #2a75bb;
     border: 2px solid #2a75bb;
