--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,62 @@
 }
 
 body {
-    line-height: 1.2em;
+    margin: 0;
 }
 
+/* --------------MODAL------------------- */
+
+#modal-container {
+    display: none;
+}
+
+#modal-container.is-visible {
+    position: fixed;
+    padding: 50px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    /* to show above all content */
+    z-index: 999;
+    /* to allow scrolling if screen isn't high enough */
+    overflow: auto;
+    /* to center the modal */
+    display: grid;
+    text-align: center;
+}
+
+.modal {
+    margin: auto;
+    display: inline-block;
+    background-color: lightgoldenrodyellow;
+    padding: 42px;
+    width: 100%;
+    max-width: 500px;
+    text-transform: capitalize;
+    text-align: left;
+    letter-spacing: 1px;
+}
+
+.modal-close {
+    float: right;
+    border: 0;
+    background: none;
+    color: #444;
+    text-decoration: underline;
+}
+
+.modal h1 {
+    margin-top: 30;
+    text-align: center;
+}
+
+.modal p {
+    margin: 10px 0;
+    font-size: 20px;
+    font-weight: 500;
+}
 
 /* ------------HEADER------------ */
 
@@ -29,12 +82,14 @@ body {
 /* ---------------MAIN-------------- */
 
 main {
-    margin: 50px;
+    margin: 125px;
+    margin-top: 25px;
 }
 
 .title-box {
     display: flex;
     justify-content: center;
+
 }
 
 .title {
@@ -44,39 +99,76 @@ main {
     font-weight: 100;
     letter-spacing: -6px;
     color: #ffcb05;
-    text-shadow: -1px 2px 2px #2a75bb;
+    text-shadow: -1px 2px 2px rgb(42, 117, 187);
     -webkit-text-stroke: 3px #2a75bb;
+    margin: 25px 0;
 }
 
 .pokemon-list {
     list-style: none;
     display: flex;
-    gap: 50px 100px;
+    gap: 75px 75px;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
 .pokeList--item {
-    font-size: 1.15em;
+    font-size: 1.25em;
     font-weight: 700;
-    line-height: 1.5em;
+    line-height: 1.25em;
+    letter-spacing: 1.5px;
     text-align: center;
     min-width: 225px;
+    min-height: 175px;
     text-transform: capitalize;
-    color: #2a75bb;
+    color: black;
     border: 2px solid #2a75bb;
     background-color: #ffcb05;
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 0;
     box-shadow: 2px 2px 2px #666;
     /* transform: rotateX(0); */
     transform: scale(1);
     transition: .1s ease-in;
 }
 
+.pokeList--item h1 {
+    font-size: 1.25em;
+    /* color: #2a75bb;
+    background-color: rgba(255, 203, 5, 0.7); */
+    color: #ffcb05;
+    background-color: rgba(42, 117, 187, 0.7);
+    margin-top: 0;
+    border-radius: 5px 5px 0 0;
+}
+
+.pokeList--item img {
+    width: 125px;
+}
+
+.pokeList--item img:hover {
+    /* transform: rotate(12deg); */
+    animation: 1s pokeDance linear;
+}
+
+@keyframes pokeDance {
+    0% {
+        transform: rotate(15deg);
+    }
+    25% {
+        transform: rotate(-15deg);
+    }
+    50% {
+        transform: rotate(15deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
+}
+
 .pokeList--item:hover {
     /* transform: rotateX(15deg); */
-    transform: scale(.985);
+    transform: scale(.992);
 }
 
 .hidden {
@@ -87,4 +179,61 @@ main {
     text-align: center;
     font-size: 100px;
     margin-top: 100px;
+}
+
+/* -------DYNAMIC BUTTON BACKGROUND COLORS------------- */
+
+.normal {
+    background-color: #a8a77a;
+}
+.fire {
+    background-color: #ee8130;
+}
+.water {
+    background-color: #6390f0;
+}
+.electric {
+    background-color: #f7d02c;
+}
+.grass {
+    background-color: #7ac74c;
+}
+.ice {
+    background-color: #96d9d6;
+}
+.fighting {
+    background-color: #c22e28;
+}
+.poison {
+    background-color: #a33ea1;
+}
+.ground {
+    background-color: #e2bf65;
+}
+.flying {
+    background-color: #a98ff3;
+}
+.psychic {
+    background-color: #f95587;
+}
+.bug {
+    background-color: #a6b91a;
+}
+.rock {
+    background-color: #b6a136;
+}
+.ghost {
+    background-color: #735797;
+}
+.dragon {
+    background-color: #6f35fc;
+}
+.dark {
+    background-color: #705746;
+}
+.steel {
+    background-color: #b7b7ce;
+}
+.fairy {
+    background-color: #d685ad;
 }
