--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
 }
 
 .modal h1 {
-    margin-top: 30;
+    margin: 30px 0;
     text-align: center;
 }
 
@@ -61,6 +61,22 @@ body {
     margin: 10px 0;
     font-size: 20px;
     font-weight: 500;
+}
+
+.modal p:first-of-type {
+    margin-top: 75px;
+}
+
+.modal img {
+    width: 250px;
+    float: right;
+    margin-top: 15px;
+}
+
+@media all and (max-width: 600px) {
+    #modal-container.is-visible {
+        padding: 0;
+    }
 }
 
 /* ------------HEADER------------ */
@@ -110,6 +126,7 @@ main {
     gap: 75px 75px;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding: 0;
 }
 
 .pokeList--item {
@@ -134,10 +151,10 @@ main {
 
 .pokeList--item h1 {
     font-size: 1.25em;
-    /* color: #2a75bb;
-    background-color: rgba(255, 203, 5, 0.7); */
-    color: #ffcb05;
-    background-color: rgba(42, 117, 187, 0.7);
+    color: #2a75bb;
+    background-color: rgba(255, 203, 5, 0.7);
+    /* color: #ffcb05;
+    background-color: rgba(42, 117, 187, 0.7); */
     margin-top: 0;
     border-radius: 5px 5px 0 0;
 }
