--- a/css/styles.css
+++ b/css/styles.css
@@ -36,20 +36,73 @@ body {
     margin: auto;
     display: inline-block;
     background-color: lightgoldenrodyellow;
-    padding: 42px;
+    padding: 30px;
     width: 100%;
-    max-width: 500px;
+    max-width: 550px;
     text-transform: capitalize;
     text-align: left;
     letter-spacing: 1px;
 }
 
-.modal-close {
+.modal img {
+    width: 250px;
     float: right;
-    border: 0;
-    background: none;
-    color: #444;
-    text-decoration: underline;
+    margin: 15px;
+}
+
+button.modal-close {
+    float: right;
+    border: none;
+    padding: 0;
+    background-color: lightgoldenrodyellow;
+}
+
+img[alt="close button"] {
+    width: 42px;
+    height: 42px;
+    margin: 0;
+}
+
+img[alt="close button"]:hover {
+    transform: rotate(24deg);
+}
+
+.next-button, .next-button img {
+    float: right;
+    width: 25px;
+    height: 25px;
+    margin: 0;
+    padding: 0;
+    background-color: lightgoldenrodyellow;
+    border: none;
+}
+
+.previous-button, .previous-button img {
+    float: left;
+    width: 25px;
+    height: 25px;
+    margin: 0;
+    padding: 0;
+    background-color: lightgoldenrodyellow;
+    border: none;
+}
+
+.stat-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.stat-item {
+    display: flex;
+    flex-direction: column-reverse;
+    height: 72px;
+    align-items: center;
+}
+
+.stat-item img {
+    width: 25px;
+    height: 25px;
+    margin: 0;
 }
 
 .modal h1 {
@@ -57,26 +110,15 @@ body {
     text-align: center;
 }
 
-.modal p {
+
+.modal p, .stat-container {
     margin: 10px 0;
     font-size: 20px;
     font-weight: 500;
 }
 
 .modal p:first-of-type {
-    margin-top: 75px;
-}
-
-.modal img {
-    width: 250px;
-    float: right;
-    margin-top: 15px;
-}
-
-@media all and (max-width: 600px) {
-    #modal-container.is-visible {
-        padding: 0;
-    }
+    margin-top: 50px;
 }
 
 /* ------------HEADER------------ */
@@ -253,4 +295,23 @@ main {
 }
 .fairy {
     background-color: #d685ad;
+}
+
+@media all and (max-width: 700px) {
+    #modal-container.is-visible {
+        padding: 0;
+    }
+    .modal img {
+        float: none;
+    }
+    .modal h1 img {
+        width: 150px;
+    }
+    .modal h1 {
+        font-size: 24px;
+    }
+    .modal {
+        text-align: center;
+        max-width: 250px;
+    }
 }
