--- a/css/styles.css
+++ b/css/styles.css
@@ -9,39 +9,24 @@ body {
     margin: 0;
 }
 
-/* --------------MODAL------------------- */
+/* ------------------------------MODAL------------------------------------ */
 
-#modal-container {
+#modal-container, .hidden {
     display: none;
 }
 
-#modal-container.is-visible {
-    position: fixed;
-    padding: 50px;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    /* to show above all content */
-    z-index: 999;
-    /* to allow scrolling if screen isn't high enough */
-    overflow: auto;
-    /* to center the modal */
-    display: grid;
-    text-align: center;
+.modal-content {    
+    text-transform: capitalize;
+     background-color: lightgoldenrodyellow;
 }
 
-.modal {
-    margin: auto;
-    display: inline-block;
-    background-color: lightgoldenrodyellow;
-    padding: 30px;
-    width: 100%;
-    max-width: 550px;
-    text-transform: capitalize;
-    text-align: left;
-    letter-spacing: 1px;
+.modal-header {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.modal h1 {
+    margin: 0;
 }
 
 .modal img {
@@ -50,21 +35,15 @@ body {
     margin: 15px;
 }
 
-button.modal-close {
-    float: right;
+button.btn-close {
+    align-items: flex-start;
     border: none;
     padding: 0;
     background-color: lightgoldenrodyellow;
 }
 
-img[alt="close button"] {
-    width: 42px;
-    height: 42px;
-    margin: 0;
-}
-
-img[alt="close button"]:hover {
-    transform: rotate(24deg);
+button[aria-label="Close"]:hover {
+    transform: scale(1.5);
 }
 
 .navContainer {
@@ -74,47 +53,36 @@ img[alt="close button"]:hover {
     justify-content: space-between;
 }
 
-.next-button, .next-button img {
+#next-button, #previous-button {
     width: 25px;
     height: 25px;
     margin: 0;
     padding: 0;
     background-color: lightgoldenrodyellow;
     border: none;
-    
 }
 
-.previous-button, .previous-button img {
-    
-    width: 25px;
-    height: 25px;
-    margin: 0;
-    padding: 0;
+.next-button, .previous-button {
     background-color: lightgoldenrodyellow;
-    border: none;
+    border-radius: 12px;
 }
 
 .stat-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    align-items: end;
+    justify-items: center;
 }
 
 .stat-item {
-    display: flex;
-    flex-direction: column-reverse;
-    height: 72px;
+    height: fit-content;
     align-items: center;
 }
 
-.stat-item img {
+.stat-container img {
     width: 25px;
     height: 25px;
     margin: 0;
-}
-
-.modal h1 {
-    margin: 30px 0;
-    text-align: center;
 }
 
 
@@ -128,24 +96,42 @@ img[alt="close button"]:hover {
     margin-top: 50px;
 }
 
-/* ------------HEADER------------ */
+/* ------------------------------------HEADER-------------------------------- */
 
-/* .page-header {
-    text-align: center;
-} */
+.page-header {
+    width: 100%;
+}
 
 .gradient-border {
     border: 0;
-    height: 2px;
+    height: 3px;
     background-image: linear-gradient(to right, blue, #ffff00da, #ffff00da, blue);
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .logo {
     width: 150px;
 }
 
-/* ---------------MAIN-------------- */
+.navBar {
+    display: flex;
+}
+
+.nav-link {
+    font-family: 'Sriracha', cursive;
+    font-size: 20px;
+    font-weight: 700;
+    color: #2a75bb;
+    width: 100px;
+    text-transform: uppercase;
+    padding: 12px 0 0 15px;
+}
+
+#navbar-nav {
+    justify-content: center;
+}
+
+/* --------------------------------MAIN------------------------------------ */
 
 main {
     margin: 125px;
@@ -154,38 +140,38 @@ main {
 
 .title-box {
     display: flex;
-    justify-content: center;
-
+    flex-direction: column;
 }
 
 .title {
-    font-family: 'Sriracha', cursive;
-    text-align: center;
-    font-size: 75px;
-    font-weight: 100;
-    letter-spacing: -6px;
-    color: #ffcb05;
-    text-shadow: -1px 2px 2px rgb(42, 117, 187);
-    -webkit-text-stroke: 3px #2a75bb;
-    margin: 0;
+    /* -webkit-text-stroke: 3px #2a75bb; */
+    margin: auto;
+    min-width: 100px;
+}
+
+#search-bar {
+    align-self: center;
+    width: 300px;
+    margin: 10px auto;
 }
 
 .pokemon-list {
     list-style: none;
     display: flex;
-    gap: 50px 50px;
+    gap: 25px;
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 0;
+    flex-direction: row;
 }
 
 .pokeList--item {
     font-size: 1.25em;
     font-weight: 700;
     line-height: 1.25em;
-    letter-spacing: 1.5px;
+    letter-spacing: -.9px;
     text-align: center;
-    min-width: 225px;
+    min-width: 200px;
     min-height: 175px;
     text-transform: capitalize;
     color: black;
@@ -194,23 +180,28 @@ main {
     border-radius: 5px;
     padding: 0;
     box-shadow: 2px 2px 2px #666;
-    /* transform: rotateX(0); */
     transform: scale(1);
     transition: .1s ease-in;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pokeList--item h1 {
+    width: 100%;
     font-size: 1.25em;
     color: #2a75bb;
     background-color: rgba(255, 203, 5, 0.7);
-    /* color: #ffcb05;
-    background-color: rgba(42, 117, 187, 0.7); */
-    margin-top: 0;
+    margin: 0;
     border-radius: 5px 5px 0 0;
 }
 
+.list-group-item {
+    border: none;
+}
+
 .pokeList--item img {
-    width: 125px;
+    height: 145px;
 }
 
 .pokeList--item img:hover {
@@ -239,14 +230,42 @@ main {
     cursor: pointer;
 }
 
-.hidden {
-    display: none;
-}
-
 .loader {
     text-align: center;
     font-size: 100px;
     margin-top: 100px;
+}
+
+/* ---------------MEDIA QUERIES----------------------------------------- */
+
+@media all and (max-width: 700px) {
+    #modal-container.is-visible {
+        padding: 0;
+    }
+    #modalImage {
+        float: none;
+        width: 150px;
+    }
+    .modal h1 {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .modal {
+        text-align: center;
+    }
+    .modal p:first-of-type {
+        margin-top: 10px;
+    }
+    #search-bar {
+        margin: 5px 0;
+        width: 225px;
+    }
+}
+
+@media all and (max-width: 250px) {
+    .logo {
+        width: 75px;
+    }
 }
 
 /* -------DYNAMIC BUTTON BACKGROUND COLORS------------- */
@@ -304,23 +323,4 @@ main {
 }
 .fairy {
     background-color: #d685ad;
-}
-
-@media all and (max-width: 700px) {
-    #modal-container.is-visible {
-        padding: 0;
-    }
-    .modal img {
-        float: none;
-    }
-    .modal h1 img {
-        width: 150px;
-    }
-    .modal h1 {
-        font-size: 24px;
-    }
-    .modal {
-        text-align: center;
-        max-width: 250px;
-    }
 }
