--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 /* Official Pokemon logo color hexes -->   Yellow: #ffcb05     blue: #2a75bb */
 
 * {
@@ -11,13 +10,14 @@ body {
 
 /* ------------------------------MODAL------------------------------------ */
 
-#modal-container, .hidden {
+#modal-container,
+.hidden {
     display: none;
 }
 
-.modal-content {    
+.modal-content {
     text-transform: capitalize;
-     background-color: lightgoldenrodyellow;
+    background-color: lightgoldenrodyellow;
 }
 
 .modal-header {
@@ -53,7 +53,8 @@ button[aria-label="Close"]:hover {
     justify-content: space-between;
 }
 
-#next-button, #previous-button {
+#next-button,
+#previous-button {
     width: 25px;
     height: 25px;
     margin: 0;
@@ -62,7 +63,8 @@ button[aria-label="Close"]:hover {
     border: none;
 }
 
-.next-button, .previous-button {
+.next-button,
+.previous-button {
     background-color: lightgoldenrodyellow;
     border-radius: 12px;
 }
@@ -85,7 +87,8 @@ button[aria-label="Close"]:hover {
     margin: 0;
 }
 
-.modal p, .stat-container {
+.modal p,
+.stat-container {
     margin: 10px 0;
     font-size: 20px;
     font-weight: 500;
@@ -117,7 +120,7 @@ button[aria-label="Close"]:hover {
 }
 
 .nav-link {
-    font-family: 'Sriracha', cursive;
+    font-family: "Sriracha", cursive;
     font-size: 20px;
     font-weight: 700;
     color: #2a75bb;
@@ -144,8 +147,8 @@ main {
 
 .title {
     /* -webkit-text-stroke: 3px #2a75bb; */
-    margin: auto;
     min-width: 100px;
+    align-self: center;
 }
 
 #search-bar {
@@ -168,7 +171,7 @@ main {
     font-size: 1.25em;
     font-weight: 700;
     line-height: 1.25em;
-    letter-spacing: -.9px;
+    letter-spacing: -0.9px;
     text-align: center;
     min-width: 200px;
     min-height: 175px;
@@ -180,7 +183,7 @@ main {
     padding: 0;
     box-shadow: 2px 2px 2px #666;
     transform: scale(1);
-    transition: .1s ease-in;
+    transition: 0.1s ease-in;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -223,10 +226,16 @@ main {
     }
 }
 
-.pokeList--item:hover, .next-button img:hover, .previous-button img:hover {
+.pokeList--item:hover,
+.next-button img:hover,
+.previous-button img:hover {
     /* transform: rotateX(15deg); */
-    transform: scale(.992);
+    transform: scale(0.992);
     cursor: pointer;
+}
+
+.page-footer {
+    text-align: center;
 }
 
 .loader {
@@ -264,6 +273,16 @@ main {
 @media all and (max-width: 250px) {
     .logo {
         width: 75px;
+    }
+    .pokeList--item,
+    .list-group-item {
+        min-width: 150px;
+        padding-left: 0;
+        align-self: flex-start;
+    }
+    #search-bar {
+        width: 160px;
+        padding: 3px;
     }
 }
 
