--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
     margin: 0;
+    background-color: #f8f9fa;
 }
 
 /* ------------------------------MODAL------------------------------------ */
@@ -18,6 +19,7 @@ body {
 .modal-content {
     text-transform: capitalize;
     background-color: lightgoldenrodyellow;
+    width: 600px;
 }
 
 .modal-header {
@@ -25,15 +27,25 @@ body {
     flex-direction: column-reverse;
 }
 
+.modal-body {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 600px;
+}
+
 .modal h1 {
     margin: 0;
 }
 
 .modal img {
-    width: 250px;
-    float: right;
-    margin: 15px;
+    max-width: 200px;
+    max-height: 220px;
 }
+/* 
+.pokeData {
+    width: 350px;
+} */
 
 button.btn-close {
     align-items: flex-start;
@@ -94,10 +106,6 @@ button[aria-label="Close"]:hover {
     font-weight: 500;
 }
 
-.modal p:first-of-type {
-    margin-top: 50px;
-}
-
 /* ------------------------------------HEADER-------------------------------- */
 
 .page-header {
@@ -115,8 +123,9 @@ button[aria-label="Close"]:hover {
     width: 150px;
 }
 
-.navBar {
-    display: flex;
+.navbar {
+    margin: 0 10px;
+    background-color: #f8f9fa	;
 }
 
 .nav-link {
@@ -136,7 +145,6 @@ button[aria-label="Close"]:hover {
 /* --------------------------------MAIN------------------------------------ */
 
 main {
-    margin: 125px;
     margin-top: 0;
 }
 
@@ -170,7 +178,7 @@ main {
 .pokemon-list {
     list-style: none;
     display: flex;
-    gap: 25px;
+    gap: 10px;
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 0;
@@ -210,6 +218,7 @@ main {
 
 .list-group-item {
     border: none;
+    background-color: #f8f9fa;
 }
 
 .pokeList--item img {
@@ -278,6 +287,12 @@ main {
         margin: 5px 0;
         width: 225px;
     }
+    .pokemon-list {
+        gap: 0;
+    }
+    .modal-body, .modal-content {
+        width: auto;
+    }
 }
 
 @media all and (max-width: 350px) {
@@ -296,6 +311,9 @@ main {
     }
     .type-container {
         width: 160px;
+    }
+    .modal-body {
+        flex-direction: column-reverse;
     }
 }
 
